Partie C avec test locus

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,6 @@ jobs:
                 python server.py &
                 echo "Waiting for Flask server to start"
                 sleep 30
+            - name: Run Locust load test
+              run: |
+                locust --config-users '[{"user_class_name": "SimpleUser", "fixed_count": 20}, {"user_class_name": "HeavyUser", "fixed_count": 980}]' --run-time 2m --headless
