--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,4 @@ jobs:
                 sleep 30
             - name: Run Locust load test
               run: |
-                locust --host http://localhost:5000 --locustfile locustfile.py --headless --run-time 2m
-                locust --config-users '[{"user_class_name": "SimpleUser", "fixed_count": 20}, {"user_class_name": "HeavyUser", "fixed_count": 980}]' --run-time 2m --headless
+                locust --locustfile locustfile.py --headless --users 10000 --spawn-rate 100 --run-time 2m --host=http://localhost:5000
